Finished test sequence and code
- Go code

	Add support for the delete parameter to remove configuration items
	in ConfigQemu

	vm.go
	CreateSnapshot
	SendkeysString

	tests
	vm_createsnapshot

- Scripts

runtests.sh
	Updates to randomMACAddress
	Move PM_PASS prompt to promptPmPass() and out of main()
	Move prompts for endpoint selection in session tests to promptEndpoint

	- New Json helpers and changes
	ctJson -> ctCreateJson
	vmJson -> vmCreateJson
	+ctUpdateConfigJson
	+vmUpdateConfigJson

	Improve script output
		Move the "end" target from runSuite (ex runSequence) to prepareSuite
		(ex prepareSequence), to stop parsing the input directly instead of
		having the run to end. This allows easier output when using reduced
		sequences/suites.

		Add function name to the script output in runSuite and runAction

	Add a more explicit use of the call step counter for setup handlers in
	runSuite and printSuite

	Update comments

	Add the rest of the tests

	There still remain some errors and stubs to complete, but it will likely
	stay this way for a while. Details to be added in TODO before moving on to
	the TF provider integration work.

	Added simple multi-suite code

	Moved "sequence" to "suite" as it better reflects what the tests look now.

	Suites are stored in scripts/suite_{suite_name}, runtest.sh in suite mode can
	receive a single suite name to run. Default in $defaultsuite in CONFIGURATION

	Current default suite is scripts/suite_full

Split testsetup_loop_all

	These are almost equal, so they can be merged back later generalizing:

	testsetup_loop_vm
	testsetup_loop_node
	testsetup_loop_storage

- Update TODO, create doc/ subdirectory

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,5 +1,5 @@
 verify storage formats and backends
-reimplement sendkeysstring, add support for enter and other keys
+add support for enter and other keys in sendkeysstring
 unify Config*.CreateVm and Config.*CloneVm, make them return the params map and have the action be managed by Vm.CreateVm/CloneVm
 
 later
